--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,11 @@
     <head></head>
     <body>
         <div id="root"></div>
-        <canvas id="game"></canvas>
+        <canvas style="border: 1px solid red" id="game"></canvas>
 
+        <!--<iframe width="420" height="315" src="https://www.youtube.com/embed/7wtfhZwyrcc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+        <!--<iframe width="420" height="315"-->
+                <!--src="https://www.youtube.com/embed/tgbNymZ7vqY">-->
+        <!--</iframe>-->
     </body>
 </html>
